<resources>
    <string name="app_name">CR</string>
    <string name="fabrics">FABRICS</string>
    <string name="products_fibres">FIBRES</string>
    <string name="try_on">TRY ON</string>
    <string name="activity_1">WELCOME TO CENTURY RAYON</string>
    <string name="clogo">logo</string>
    <string name="contact">CONTACT US</string>
    <string name="about">ABOuT US</string>
    <string name="title_activity_3">Activity3</string>
    <string name="tab_text_1">SPECIFICATIONS</string>
    <string name="tab_text_2">APPLICATIONS</string>
    <string name="title_activity_4">Activity4</string>
    <string name="title_activity_5">Activity5</string>
    <string name="title_activity_6">Activity6</string>
    <string name="title_activity_7">Activity7</string>
    <string name="aboutus">
              Introduction
        Recently in terms of agreement signed between the Board of Directors of Century Textiles and Industries Limited (A flagship company of Mr. B.K. Birla Group) and Grasim Industries Limited (one of the major Group Companies of Aditya Birla Group), the management and operation of Century Rayon had been given to Grasim Industries Limited for a period of 15 years beginning from 1st February 2018 or such other earlier date as defined in the Agreement. By virtue of this agreement Century Rayon, a leading player in Viscose Filament Yarn business in India is now under the Management and Operation of Grasim Industries Limited belonging to Aditya Birla Group (ABG). The group has diversified interest in textile, cement, metals, carbon black, financial services, insurance, chemicals, fertilizer, insulators and telelophony etc. Century Rayon contributes to the Viscose Filament Yarn (VFY) business in the group and has the distinction of being the largest producer of the product in India.

 The company offers the following products to the market :-
 Viscose Filament Textile Yarn (Centrifugally Spun)
 Continuous Spun Viscose Filament Rayon Yarn
 Rayon Tyre Yarn
 Carbon-di-Sulphide
 Sulphuric Acid Caustic Soda and its allied  products like Liquid Chlorine and Compressed Hydrogen

History

Century Rayon was established in 1952 under its founder and present chairman Mr. Basant Kumar Birla and commenced production in 1956 with an initial capacity output of 2000 TPA. However, this was only a humble beginning, as Mr. B. K. Birla had then envisaged a much larger set up that eventually saw fruition through various periodic expansions resulting in the present day total capacity of 25000 TPA. Continuing with the company’s growth, the expansion plans incorporated the establishment of Tyre Yarn and Cord Plant in collaboration with M/s. AKU Holland in 1963 and the Continuous Spun Yarn Plant in collaboration with M/s. Snia Engineering, Italy in 1998. Earlier in 1960, the Caustic Soda Plant was established. Subsequently there has been several capacity additions to existing facilities.

Location

Century Rayon is strategically located 54 Km Northeast of Mumbai, the commercial capital of India that has major air and sea ports. The factory campus is spread over 130 acres land astride Murbad Road on the bank of Ulhas River, a lifeline to any viscose factory. The factory is well connected to the industrial hub of Western India with good connectivity to Mumbai and various other major cities in the region</string>
    <string name="contactus">Regd. Office
Birlagram, Nagda - 456331 (M.P.)

Mumbai Office
Address:
Industry House 159,
Churchgate Reclammation,
Mumbai - 400 020 Maharashtra, INDIA

Phone:
91-22-22027570 (8 Lines)

Fax:
91-22-22025109 (General)
91-22-22027916 (Purchase)
91-22-22028892 (Marketing)

Email:
cen-rayon.marketing@adityabirla.com

View Larger Map

</string>
</resources>
